--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-streamlit==1.31.1
-pandas==2.1.4
-numpy==1.24.3
-scikit-learn==1.3.2
-plotly==5.18.0
-seaborn==0.13.0
-matplotlib==3.8.2
-joblib==1.3.2 
+fastapi
+uvicorn
+pandas
+scikit-learn
+joblib
+numpy
+imbalanced-learn
+matplotlib
+seaborn
+streamlit
+plotly
